version/stable/_sources/api/ansys/mechanical/stubs/v241/Ansys/Mechanical/DataModel/Enums/TriangleReduction.rst.txt
.. vale off



:class:`TriangleReduction`
==========================

.. py:class:: ansys.mechanical.stubs.v241.Ansys.Mechanical.DataModel.Enums.TriangleReduction

   Bases: :py:obj:`enum.Enum`


   
   Generic enumeration.

   Derive from this class to define new enumerations.















   ..
       !! processed by numpydoc !!


.. py:currentmodule:: TriangleReduction

Overview
--------

.. tab-set::





   .. tab-item:: Attributes

      .. list-table::
          :header-rows: 0
          :widths: auto

          * - :py:attr:`~Aggressive`
            - 
          * - :py:attr:`~Conservative`
            - 
          * - :py:attr:`~None_`
            - 








Attribute detail
----------------
.. py:attribute:: Aggressive
   :value: 2


.. py:attribute:: Conservative
   :value: 1


.. py:attribute:: None_
   :value: 0






.. vale on